Replace List.of usage in UserPrincipal